Convert Boolean request value into char
- Addresses BroadleafCommerce/QA#1633